--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.3.0
   animated_text_kit: ^4.2.3
+  loading_indicator: ^3.1.1
 
 dev_dependencies:
   flutter_test:
